Convert from Maven to gradle project combined with updating Unit Tests for JUnit 5